css: fix a search bar alignment problem

--- a/blog/static/css.css
+++ b/blog/static/css.css
@@ -454,6 +454,10 @@ form#search fieldset button {
     border: none;
 }
 
+form#search .field {
+    margin-top: 0 !important;
+}
+
 body.cart div.cart-summary {
     box-shadow: 3px 3px 3px black;
 }
